# meccz

./: .gitignore  Cargo.toml  README.md  build_ios.sh  cbindgen.toml
ios/: README.md
ios/MecczApp/: CompassTableView.swift  ContentView.swift  LocationManager.swift  MecczApp.swift  MecczBridge.swift
src/: core.rs  ffi.rs  geocoding.rs  interfaces.rs  lib.rs  main.rs  qibla.rs  tests.rs
